--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 .App {
-  text-align: center;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
+.caption{
+    color: blue;
+    font-size: 1.55rem
+}
+ 
+.figure{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: calc(100% - 30px);
+}
